Smarter zoom scaling